Styling header, footer and added images

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
-title: Homepage
+title: The Yoga Studio Homepage
+overline: Welcome to
+main-heading: The Yoga Studio
 ---
-<h1 class="text-4xl font-bold text-green-900">Welcome to your homepage!</h1>
