header and footer updated
need to move the newsletter subscribe button to the right

--- a/index.html
+++ b/index.html
@@ -3,4 +3,6 @@ layout: default
 title: The Yoga Studio Homepage
 overline: Welcome to
 main-heading: The Yoga Studio
+banner-image: /images/yoga-studio-9.jpg
+banner-image-alt:
 ---
