--- a/index.html
+++ b/index.html
@@ -5,4 +5,16 @@ overline: Welcome to
 main-heading: The Yoga Studio
 banner-image: /images/yoga-studio-9.jpg
 banner-image-alt:
+blocks:
+  - id: text-and-image-grid
+    heading: Duis Aute Irure
+    text-1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ullam debitis ipsa nemo unde omnis nisi, corporis ex asperiores minus sequi perferendis alias. Nisi quod vero incidunt, sapiente reiciendis ducimus. Nisi quod vero incidunt, sapiente reiciendis ducimus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    text-2: 
+    button-text: Sign up
+    image: /images/yoga-studio-8.jpg
+  - id: large-image-and-multi-text-grid
+    image: /images/yoga-studio-7.jpg
+    heading: Our Classes
+    text: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam provident, iste culpa, voluptatibus magnam error tempora minima modi quod suscipit vel facilis pariatur voluptas odio totam molestiae temporibus minus omnis?
+    button-text: Find out more
 ---
