--- a/index.html
+++ b/index.html
@@ -17,4 +17,28 @@ blocks:
     heading: Our Classes
     text: Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam provident, iste culpa, voluptatibus magnam error tempora minima modi quod suscipit vel facilis pariatur voluptas odio totam molestiae temporibus minus omnis?
     button-text: Find out more
+    text-loop:
+      - heading: Bikram Hot Yoga
+        text: Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quas rem nisi deserunt.
+      - heading: Hatha Yoga
+        text: Explicabo ducimus. Neque tenetur pariatur illum quidem repudiandae tihil laboriosam voluptatibus! Facere, fuga.
+      - heading: Chakra Flow
+        text: Neque tenetur pariatur illum quidem repudiandae totam nesciunt autem nihil laboriosam voluptatibus! Facere, fuga.
+      - heading: Vinyasa Flow
+        text: Amet consectetur adipisicing elit. Cum assumenda quas rem nisi deserunt adipisicing elit.
+  - id: cards-section
+    main-heading: Testimonials
+    card-loop:
+      - image: /images/yoga-studio-6.jpg
+        alt:
+        heading: Maria
+        text: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem laudantium, dolor blanditiis!
+      - image: /images/yoga-studio-5.jpg
+        alt: 
+        heading: Stacy
+        text: Dolor sit amet consectetur adipisicing elit. Dolorem laudantium, dolor blanditiis laudantium.
+      - image: /images/yoga-studio-4.jpg
+        alt:
+        heading: Anne
+        text: Laudantium Dolor sit amet consectetur adipisicing elit. Dolorem laudantium, dolor.
 ---
