fixed some details, started the schedule page
fixed the padding/margin on the border cards by adding another div

fixed the newsletter submit button by adding text-right to the div

made the option for full or 2/3 photo on the header with if statement

made the positioning possible with inline style and liquid tags

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 ---
 layout: default
 title: The Yoga Studio Homepage
-overline: Welcome to
-main-heading: The Yoga Studio
-banner-image: /images/yoga-studio-9.jpg
-banner-image-alt:
+banner:
+  overline: Welcome to
+  main-heading: The Yoga Studio
+  banner-image: /images/yoga-studio-9.jpg
+  banner-image-alt:
+  header-style: full width
 blocks:
   - id: text-and-image-grid
     heading: Duis Aute Irure
