--- a/our-classes.html
+++ b/our-classes.html
@@ -1,24 +1,27 @@
 ---
 layout: default
 title: Our Classes
-overline:
-main-heading: Our Classes
-banner-image: /images/yoga-studio-7.jpg
-banner-image-alt:
+banner:
+  overline:
+  main-heading: Our Classes
+  banner-image: /images/yoga-studio-7.jpg
+  banner-image-alt:
+  header-style: two thirds
+  banner-horizontal-focal-point: center
+  banner-vertical-focal-point: top
 blocks:
   - id: cards-with-border-section
-      main-heading: Testimonials
-      card-loop:
-        - image: /images/yoga-studio-1.jpg
-          alt:
-          heading: Chakra Flow
-          text: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem laudantium, dolor blanditiis!
-        - image: /images/yoga-studio-2.jpg
-          alt: 
-          heading: Hatha Yoga
-          text: Dolor sit amet consectetur adipisicing elit. Dolorem laudantium, dolor blanditiis laudantium.
-        - image: /images/yoga-studio-3.jpg
-          alt:
-          heading: Bikram Hot Yoga
-          text: Laudantium Dolor sit amet isicing elit. Dolorem nditiis laudantium laudantium, dolor blandi.
+    card-loop:
+      - image: /images/yoga-studio-3.jpg
+        alt:
+        heading: Chakra Flow
+        text: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem laudantium, dolor blanditiis!
+      - image: /images/yoga-studio-7.jpg
+        alt: 
+        heading: Hatha Yoga
+        text: Dolor sit amet consectetur adipisicing elit. Dolorem laudantium, dolor blanditiis laudantium.
+      - image: /images/yoga-studio-2.jpg
+        alt:
+        heading: Bikram Hot Yoga
+        text: Laudantium Dolor sit amet isicing elit. Dolorem nditiis laudantium laudantium, dolor blandi.
 ---
