need to still fix the contact page

--- a/schedule.html
+++ b/schedule.html
@@ -4,10 +4,10 @@ title: Schedule
 banner:
   overline:
   main-heading: Schedule
-  banner-image: /images/yoga-studio-7.jpg
+  banner-image: /images/yoga-studio-2.jpg
   banner-image-alt:
   header-style: two thirds
   banner-horizontal-focal-point: center
-  banner-vertical-focal-point: top
+  banner-vertical-focal-point: center
 blocks:
 ---
