contact form and buttons

--- a/our-classes.html
+++ b/our-classes.html
@@ -16,12 +16,15 @@ blocks:
         alt:
         heading: Chakra Flow
         text: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem laudantium, dolor blanditiis!
+        button-text: Sign up
       - image: /images/yoga-studio-7.jpg
         alt: 
         heading: Hatha Yoga
         text: Dolor sit amet consectetur adipisicing elit. Dolorem laudantium, dolor blanditiis laudantium.
+        button-text: Sign up
       - image: /images/yoga-studio-2.jpg
         alt:
         heading: Bikram Hot Yoga
         text: Laudantium Dolor sit amet isicing elit. Dolorem nditiis laudantium laudantium, dolor blandi.
+        button-text: Sign up
 ---
