playing with the order and options for cloud cannon

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 layout: default
 title: The Yoga Studio Homepage
 banner:
+  header-style: full width
   overline: Welcome to
   main-heading: The Yoga Studio
   banner-image: /images/yoga-studio-9.jpg
   banner-image-alt:
-  header-style: full width
+  banner-horizontal-focal-point: 
+  banner-vertical-focal-point: 
 blocks:
   - id: text-and-image-grid
     heading: Duis Aute Irure
