Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ banner:
   main-heading: The Yoga Studio
   banner-image: /images/yoga-studio-9.jpg
   banner-image-alt:
-  banner-horizontal-focal-point: 
-  banner-vertical-focal-point: 
+  banner-horizontal-focal-point: right
+  banner-vertical-focal-point: bottom
 blocks:
   - id: text-and-image-grid
     heading: Duis Aute Irure
