--- a/our-classes.html
+++ b/our-classes.html
@@ -19,6 +19,7 @@ blocks:
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
           laudantium, dolor blanditiis!
         button-text: Sign up
+        button-link: https://www.google.com/
       - image: /images/yoga-studio-7.jpg
         alt:
         heading: Hatha Yoga
@@ -26,6 +27,7 @@ blocks:
           Dolor sit amet consectetur adipisicing elit. Dolorem laudantium, dolor
           blanditiis laudantium.
         button-text: Sign up
+        button-link: 
       - image: /images/yoga-studio-2.jpg
         alt:
         heading: Bikram Hot Yoga
@@ -33,4 +35,5 @@ blocks:
           Laudantium Dolor sit amet isicing elit. Dolorem nditiis laudantium
           laudantium, dolor blandi.
         button-text: Sign up
+        button-link:
 ---
