Fixed the cards-with-borders-section
This made all the options for the cards optional:
-section heading
-borders
-button (and making the button only appear if there's a link and button text)

--- a/our-classes.html
+++ b/our-classes.html
@@ -11,6 +11,8 @@ banner:
   banner-vertical-focal-point: top
 blocks:
   - id: cards-with-border-section
+    section-heading: A variety of yoga styles
+    card-border: true
     card-loop:
       - image: /images/yoga-studio-3.jpg
         alt:
@@ -19,7 +21,7 @@ blocks:
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
           laudantium, dolor blanditiis!
         button-text: Sign up
-        button-link: https://www.google.com/
+        button-link: /schedule.html
       - image: /images/yoga-studio-7.jpg
         alt:
         heading: Hatha Yoga
@@ -27,7 +29,7 @@ blocks:
           Dolor sit amet consectetur adipisicing elit. Dolorem laudantium, dolor
           blanditiis laudantium.
         button-text: Sign up
-        button-link: 
+        button-link: /schedule.html
       - image: /images/yoga-studio-2.jpg
         alt:
         heading: Bikram Hot Yoga
@@ -35,5 +37,5 @@ blocks:
           Laudantium Dolor sit amet isicing elit. Dolorem nditiis laudantium
           laudantium, dolor blandi.
         button-text: Sign up
-        button-link:
+        button-link: /schedule.html
 ---
