added data files for classes and testimonials
this makes it dynamic for when you're adding info in one place but goes to mulitple places

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ blocks:
       suscipit vel facilis pariatur voluptas odio totam molestiae temporibus
       minus omnis?
     button-text: Find out more
+    button-link: /our-classes.html
     text-loop:
       - heading: Bikram Hot Yoga
         text: >-
@@ -49,24 +50,7 @@ blocks:
           Amet consectetur adipisicing elit. Cum assumenda quas rem nisi
           deserunt adipisicing elit.
   - id: cards-section
-    main-heading: Testimonials
-    card-loop:
-      - image: /images/yoga-studio-6.jpg
-        alt:
-        heading: Maria
-        text: >-
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-          laudantium, dolor blanditiis!
-      - image: /images/yoga-studio-5.jpg
-        alt:
-        heading: Stacy
-        text: >-
-          Dolor sit amet consectetur adipisicing elit. Dolorem laudantium, dolor
-          blanditiis laudantium.
-      - image: /images/yoga-studio-4.jpg
-        alt:
-        heading: Anne
-        text: >-
-          Laudantium Dolor sit amet consectetur adipisicing elit. Dolorem
-          laudantium, dolor.
+    section-heading: Testimonials
+    card-border: false
+    type: testimonials
 ---
