--- a/our-classes.html
+++ b/our-classes.html
@@ -10,32 +10,8 @@ banner:
   banner-horizontal-focal-point: center
   banner-vertical-focal-point: top
 blocks:
-  - id: cards-with-border-section
+  - id: cards-section
     section-heading: A variety of yoga styles
     card-border: true
-    card-loop:
-      - image: /images/yoga-studio-3.jpg
-        alt:
-        heading: Chakra Flow
-        text: >-
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-          laudantium, dolor blanditiis!
-        button-text: Sign up
-        button-link: /schedule.html
-      - image: /images/yoga-studio-7.jpg
-        alt:
-        heading: Hatha Yoga
-        text: >-
-          Dolor sit amet consectetur adipisicing elit. Dolorem laudantium, dolor
-          blanditiis laudantium.
-        button-text: Sign up
-        button-link: /schedule.html
-      - image: /images/yoga-studio-2.jpg
-        alt:
-        heading: Bikram Hot Yoga
-        text: >-
-          Laudantium Dolor sit amet isicing elit. Dolorem nditiis laudantium
-          laudantium, dolor blandi.
-        button-text: Sign up
-        button-link: /schedule.html
+    type: classes
 ---
