Large image and multi text grid
made this dynamic with the classes cards and also added fancy if statement to make 'see more' pop up after there's more than 4 classes

--- a/index.html
+++ b/index.html
@@ -32,23 +32,7 @@ blocks:
       minus omnis?
     button-text: Find out more
     button-link: /our-classes.html
-    text-loop:
-      - heading: Bikram Hot Yoga
-        text: >-
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
-          quas rem nisi deserunt.
-      - heading: Hatha Yoga
-        text: >-
-          Explicabo ducimus. Neque tenetur pariatur illum quidem repudiandae
-          tihil laboriosam voluptatibus! Facere, fuga.
-      - heading: Chakra Flow
-        text: >-
-          Neque tenetur pariatur illum quidem repudiandae totam nesciunt autem
-          nihil laboriosam voluptatibus! Facere, fuga.
-      - heading: Vinyasa Flow
-        text: >-
-          Amet consectetur adipisicing elit. Cum assumenda quas rem nisi
-          deserunt adipisicing elit.
+    type: classes
   - id: cards-section
     section-heading: Testimonials
     card-border: false
