adding the image focal point and left/right

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@ blocks:
     text-2:
     button-text: Sign up
     image: /images/yoga-studio-8.jpg
+    image-placement: right
+    image-horizontal-focal-point: center
+    image-vertical-focal-point: top
   - id: large-image-and-multi-text-grid
     image: /images/yoga-studio-7.jpg
     heading: Our Classes
