added text placement options to the text and image grid

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ blocks:
       consectetur adipisicing elit.
     text-2:
     button-text: Sign up
+    text-placement: bottom
     image: /images/yoga-studio-8.jpg
     image-placement: right
     image-horizontal-focal-point: center
