adding image focal point to the cloud cannon config
still need to work out the complexities of the image-placement with how the small text grid then sits

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ blocks:
     button-text: Sign up
     text-placement: bottom
     image: /images/yoga-studio-8.jpg
+    alt:
     image-placement: right
     image-horizontal-focal-point: center
     image-vertical-focal-point: top
   - id: large-image-and-multi-text-grid
-    image: /images/yoga-studio-7.jpg
     heading: Our Classes
     text: >-
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam
@@ -36,6 +36,10 @@ blocks:
       minus omnis?
     button-text: Find out more
     button-link: /our-classes.html
+    image: /images/yoga-studio-7.jpg
+    alt:
+    image-horizontal-focal-point: center
+    image-vertical-focal-point: top
     type: classes
   - id: cards-section
     section-heading: Testimonials
