Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -44,5 +44,5 @@ blocks:
   - id: cards-section
     section-heading: Testimonials
     card-border: false
-    type: testimonials
+    type: classes
 ---
