Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ blocks:
     alt:
     image-horizontal-focal-point: center
     image-vertical-focal-point: top
-    type: classes
+    type: testimonials
   - id: cards-section
     section-heading: Testimonials
     card-border: false
-    type: classes
+    type: testimonials
 ---
