Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ blocks:
     alt:
     image-horizontal-focal-point: center
     image-vertical-focal-point: top
-    type: testimonials
+    type: classes
   - id: cards-section
     section-heading: Testimonials
     card-border: false
