--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: The Yoga Studio Homepage
-banner:
+hero-banner:
   header-style: full width
   overline: Welcome to
   main-heading: The Yoga Studio
