--- a/our-classes.html
+++ b/our-classes.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Our Classes
-banner:
+hero-banner:
   header-style: two thirds
   overline:
   main-heading: Our Classes
